different blue + pending overflow scroll bar bug

--- a/sass/themes/light.sass
+++ b/sass/themes/light.sass
@@ -3,7 +3,7 @@
 
 $text-color: #333
 $body-bg: #fff
-$brand-primary: #337ab7
+$brand-primary: #595dc9
 $brand-success: #49c2a7
 $brand-info: #8a5bc8
 $brand-warning: #c93a1a
